feat: implementação do frontend 2 + deploy em docker + README completo